gallery2 composition added

--- a/site/views/composition/gallery2.html
+++ b/site/views/composition/gallery2.html
@@ -8,7 +8,7 @@
 {% block script %}
 {% parent %}
 <script>
-var app = app || { composition:'gallery' };
+var app = app || { composition:'gallery2' };
 </script>
 <script type="text/jsx" src="/script/composition/gallery.js"></script>
 {% endblock %}
@@ -32,80 +32,59 @@ var app = app || { composition:'gallery' };
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="r3c1 widget-container"></div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="r3c2 widget-container"></div>
         </div>
-        <div class="col-md-4">
-            <div class="r3c3 widget-container"></div>
-        </div>
     </div>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="r4c1 widget-container"></div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="r4c2 widget-container"></div>
         </div>
-        <div class="col-md-4">
-            <div class="r4c3 widget-container"></div>
-        </div>
     </div>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="r5c1 widget-container"></div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="r5c2 widget-container"></div>
         </div>
-        <div class="col-md-4">
-            <div class="r5c3 widget-container"></div>
-        </div>
     </div>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="r6c1 widget-container"></div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="r6c2 widget-container"></div>
         </div>
-        <div class="col-md-4">
-            <div class="r6c3 widget-container"></div>
-        </div>
     </div>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="r7c1 widget-container"></div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="r7c2 widget-container"></div>
         </div>
-        <div class="col-md-4">
-            <div class="r7c3 widget-container"></div>
-        </div>
     </div>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="r8c1 widget-container"></div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="r8c2 widget-container"></div>
-        </div>
-        <div class="col-md-4">
-            <div class="r8c3 widget-container"></div>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="r9c1 widget-container"></div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
             <div class="r9c2 widget-container"></div>
-        </div>
-        <div class="col-md-4">
-            <div class="r9c3 widget-container"></div>
         </div>
     </div>
 </div>
