--- a/site/views/composition/sidenav2.html
+++ b/site/views/composition/sidenav2.html
@@ -23,8 +23,11 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-3">
             <div class="r2c1 widget-container"></div>
+        </div>
+        <div class="col-md-9">
+            <div class="r2c2 widget-container"></div>
         </div>
     </div>
     <div class="row">
@@ -36,8 +39,11 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-3">
             <div class="r4c1 widget-container"></div>
+        </div>
+        <div class="col-md-9">
+            <div class="r4c2 widget-container"></div>
         </div>
     </div>
     <div class="row">
