added plate component to cabinet and composition layout page

--- a/site/views/layout/layout-composition.html
+++ b/site/views/layout/layout-composition.html
@@ -25,6 +25,7 @@
 <script type="text/jsx" src="/component/media/detail.js"></script>
 <script type="text/jsx" src="/component/article/detail.js"></script>
 <script type="text/jsx" src="/component/linkset/detail.js"></script>
+<script type="text/jsx" src="/component/plate/plate.js"></script>
 <script type="text/jsx" src="/component/graph/d3graph.js"></script>
 <script type="text/jsx" src="/component/reactlet-calendar/src/calendar.js"></script>
 <script type="text/jsx" src="/component/reactlet-carousel/src/carousel.js"></script>
@@ -57,6 +58,7 @@ app.pageComposition = {{ page.compositionData|json|safe}};
 <link rel="stylesheet" href="/component/media/detail.css"/>
 <link rel="stylesheet" href="/component/article/detail.css"/>
 <link rel="stylesheet" href="/component/linkset/detail.css"/>
+<link rel="stylesheet" href="/component/plate/plate.css"/>
 <link rel="stylesheet" href="/component/graph/d3graph.css"/>
 <link rel="stylesheet" href="/component/reactlet-calendar/style/calendar.css"/>
 <link rel="stylesheet" href="/component/reactlet-carousel/style/carousel.css"/>
