--- a/site/views/composition/gallery2.html
+++ b/site/views/composition/gallery2.html
@@ -20,7 +20,7 @@ var app = app || { composition:'gallery2' };
 <div class="container-full-width">
     <div class="h2c1 widget-container"></div>
 </div>
-<div class="container">
+<div class="container container-gallery2">
     <div class="row">
         <div class="col-md-12">
             <div class="r1c1 widget-container"></div>
@@ -31,7 +31,7 @@ var app = app || { composition:'gallery2' };
             <div class="r2c1 widget-container"></div>
         </div>
     </div>
-    <div class="row">
+    <div class="row row-gallery">
         <div class="col-md-6">
             <div class="r3c1 widget-container"></div>
         </div>
@@ -39,7 +39,7 @@ var app = app || { composition:'gallery2' };
             <div class="r3c2 widget-container"></div>
         </div>
     </div>
-    <div class="row">
+    <div class="row row-gallery">
         <div class="col-md-6">
             <div class="r4c1 widget-container"></div>
         </div>
@@ -47,7 +47,7 @@ var app = app || { composition:'gallery2' };
             <div class="r4c2 widget-container"></div>
         </div>
     </div>
-    <div class="row">
+    <div class="row row-gallery">
         <div class="col-md-6">
             <div class="r5c1 widget-container"></div>
         </div>
@@ -55,7 +55,7 @@ var app = app || { composition:'gallery2' };
             <div class="r5c2 widget-container"></div>
         </div>
     </div>
-    <div class="row">
+    <div class="row row-gallery">
         <div class="col-md-6">
             <div class="r6c1 widget-container"></div>
         </div>
@@ -63,7 +63,7 @@ var app = app || { composition:'gallery2' };
             <div class="r6c2 widget-container"></div>
         </div>
     </div>
-    <div class="row">
+    <div class="row row-gallery">
         <div class="col-md-6">
             <div class="r7c1 widget-container"></div>
         </div>
@@ -71,7 +71,7 @@ var app = app || { composition:'gallery2' };
             <div class="r7c2 widget-container"></div>
         </div>
     </div>
-    <div class="row">
+    <div class="row row-gallery">
         <div class="col-md-6">
             <div class="r8c1 widget-container"></div>
         </div>
@@ -79,7 +79,7 @@ var app = app || { composition:'gallery2' };
             <div class="r8c2 widget-container"></div>
         </div>
     </div>
-    <div class="row">
+    <div class="row row-gallery">
         <div class="col-md-6">
             <div class="r9c1 widget-container"></div>
         </div>
