add webcharts to cabinet component

--- a/site/views/layout/layout-composition.html
+++ b/site/views/layout/layout-composition.html
@@ -27,6 +27,7 @@
 <script type="text/jsx" src="/component/linkset/detail.js"></script>
 <script type="text/jsx" src="/component/plate/plate.js"></script>
 <script type="text/jsx" src="/component/graph/d3graph.js"></script>
+<script type="text/jsx" src="/component/webcharts/webcharts.js"></script>
 <script type="text/jsx" src="/component/reactlet-calendar/src/calendar.js"></script>
 <script type="text/jsx" src="/component/reactlet-carousel/src/carousel.js"></script>
 <script type="text/jsx" src="/component/reactlet-table/src/table.js"></script>
@@ -60,6 +61,7 @@ app.pageComposition = {{ page.compositionData|json|safe}};
 <link rel="stylesheet" href="/component/linkset/detail.css"/>
 <link rel="stylesheet" href="/component/plate/plate.css"/>
 <link rel="stylesheet" href="/component/graph/d3graph.css"/>
+<link rel="stylesheet" href="/component/webcharts/webcharts.css"/>
 <link rel="stylesheet" href="/component/reactlet-calendar/style/calendar.css"/>
 <link rel="stylesheet" href="/component/reactlet-carousel/style/carousel.css"/>
 <link rel="stylesheet" href="/component/reactlet-table/style/table.css"/>
