--- a/site/views/layout/layout-composition.html
+++ b/site/views/layout/layout-composition.html
@@ -15,6 +15,7 @@
 <script src="/library/react/JSXTransformer.js"></script>
 <script src="/library/d3/d3.min.js"></script>
 <script src="/library/webcharts/webcharts.v1_1_1.js"></script>
+<script src="/library/plotly_basic/plotly.min.js"></script>
 <script src="/library/react-d3-components/react-d3-components.min.js"></script>
 <script type="text/jsx" src="/component/common/common-mixin.js"></script>
 <script type="text/jsx" src="/script/page/support.js"></script>
