plotly linechart basic works

--- a/site/views/layout/layout-composition.html
+++ b/site/views/layout/layout-composition.html
@@ -15,7 +15,7 @@
 <script src="/library/react/JSXTransformer.js"></script>
 <script src="/library/d3/d3.min.js"></script>
 <script src="/library/webcharts/webcharts.v1_1_1.js"></script>
-<script src="/library/plotly_basic/plotly.min.js"></script>
+<script src="/library/plotly-basic/plotly.min.js"></script>
 <script src="/library/react-d3-components/react-d3-components.min.js"></script>
 <script type="text/jsx" src="/component/common/common-mixin.js"></script>
 <script type="text/jsx" src="/script/page/support.js"></script>
@@ -30,6 +30,7 @@
 <script type="text/jsx" src="/component/plate/plate.js"></script>
 <script type="text/jsx" src="/component/graph/d3graph.js"></script>
 <script type="text/jsx" src="/component/webcharts/webcharts.js"></script>
+<script type="text/jsx" src="/component/plotly/plotly.js"></script>
 <script type="text/jsx" src="/component/reactlet-calendar/src/calendar.js"></script>
 <script type="text/jsx" src="/component/reactlet-carousel/src/carousel.js"></script>
 <script type="text/jsx" src="/component/reactlet-table/src/table.js"></script>
@@ -64,6 +65,7 @@ app.pageComposition = {{ page.compositionData|json|safe}};
 <link rel="stylesheet" href="/component/plate/plate.css"/>
 <link rel="stylesheet" href="/component/graph/d3graph.css"/>
 <link rel="stylesheet" href="/component/webcharts/webcharts.css"/>
+<link rel="stylesheet" href="/component/plotly/plotly.css"/>
 <link rel="stylesheet" href="/component/reactlet-calendar/style/calendar.css"/>
 <link rel="stylesheet" href="/component/reactlet-carousel/style/carousel.css"/>
 <link rel="stylesheet" href="/component/reactlet-table/style/table.css"/>
