added style for cabinet-container-edit class

--- a/site/public/component/cabinet/cabinet.css
+++ b/site/public/component/cabinet/cabinet.css
@@ -18,3 +18,7 @@
 .listelement-container .listelement-icon-container {
     padding-right: 5px;
 }
+
+.cabinet-container-edit {
+    border: solid 1px #999;
+}
