--- a/site/public/component/cabinet/cabinet.css
+++ b/site/public/component/cabinet/cabinet.css
@@ -29,10 +29,9 @@
 
 .cabinet-edit-element {
     float: right;
-    padding: 5px;
+    padding: 2px 5px 2px 5px;
     border: solid 1px #999;
-    color: red;
-    /* display: none; */
+    color: #aaa;
 }
 
 .cabinet-edit-element > :hover {
