--- a/site/public/component/cabinet/cabinet.css
+++ b/site/public/component/cabinet/cabinet.css
@@ -28,13 +28,16 @@
 }
 
 .cabinet-edit-element {
+    position: relative;
     float: right;
     padding: 2px 5px 2px 5px;
-    border: solid 1px #999;
+    border: solid 0px #f2f2f2;
+    background-color: green;
     color: #aaa;
+    z-index: 900;
 }
 
-.cabinet-edit-element > :hover {
-    background-color: #f2f2f2;
+.cabinet-edit-element:hover {
     color: blue;
+    cursor: pointer;
 }
