--- a/site/views/page/edit.html
+++ b/site/views/page/edit.html
@@ -11,6 +11,7 @@
 <script>
 var app = {
     mode: "{{ page.mode }}",
+    section: "{{ page.section }}",
     pageName:"{{ page.pageObject.name }}" || "{{ page.name }}",
     pageData: {{ page.pageObject|json|raw }}
 };
