--- a/site/public/component/footer/blackboot_footer.css
+++ b/site/public/component/footer/blackboot_footer.css
@@ -1,10 +1,9 @@
-.footer_container {
+.blackbootfooter-container .footer_container {
     margin-top: 25px;
     margin-bottom: 25px;
     width: 90%;
 }
 
-.footer_container .footer-links {
+.blackbootfooter-container .footer_container .footer-links {
     font-size: 14px;
 }
-
