added highcharts in cabinet

--- a/site/views/layout/layout-composition.html
+++ b/site/views/layout/layout-composition.html
@@ -33,6 +33,7 @@
 <script type="text/jsx" src="/component/graph/d3graph.js"></script>
 <script type="text/jsx" src="/component/webcharts/webcharts.js"></script>
 <script type="text/jsx" src="/component/plotly/plotly.js"></script>
+<script type="text/jsx" src="/component/highcharts/highcharts.js"></script>
 <script type="text/jsx" src="/component/reactlet-calendar/src/calendar.js"></script>
 <script type="text/jsx" src="/component/reactlet-carousel/src/carousel.js"></script>
 <script type="text/jsx" src="/component/reactlet-table/src/table.js"></script>
@@ -71,6 +72,7 @@ app.pageComposition = {{ page.compositionData|json|safe}};
 <link rel="stylesheet" href="/component/graph/d3graph.css"/>
 <link rel="stylesheet" href="/component/webcharts/webcharts.css"/>
 <link rel="stylesheet" href="/component/plotly/plotly.css"/>
+<link rel="stylesheet" href="/component/highcharts/highcharts.css"/>
 <link rel="stylesheet" href="/component/reactlet-calendar/style/calendar.css"/>
 <link rel="stylesheet" href="/component/reactlet-carousel/style/carousel.css"/>
 <link rel="stylesheet" href="/component/reactlet-table/style/table.css"/>
