--- a/site/views/component/index.html
+++ b/site/views/component/index.html
@@ -10,15 +10,12 @@
 <div class="body-container container" style="margin-top:10px;">
     
     <div class="row">
-        <h2>Component Home</h2>
+        <h2>Components</h2>
     </div>
     
     <div class="row" style="margin-top:20px;">
-        <h4>Data Section</h4>
         <div>
-            <a href="/data/components/get/data?module=article">
-                /data/components/get/data?module=article
-            </a>
+            page content
         </div>
     </div>
 </div>
