admin index page update

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -51,6 +51,9 @@
                     <a href="/modules/article/list">Article</a>
                 </div>
                 <div>
+                    <a href="/modules/component/list">Component</a>
+                </div>
+                <div>
                     <a href="/modules/composition/list">Composition</a>
                 </div>
                 <div>
@@ -73,10 +76,10 @@
         <div class="col-md-6">
             <div class="section">
                 <h4>Test</h4>
+                <!--
                 <div>
                     <a href="/articles">Article</a>
                 </div>
-                <!--
                 <div>
                     <a href="/announcements">Announcement</a>
                 </div>
