admin index page update

--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -34,7 +34,7 @@
         -->
         <div class="col-md-6">
             <div class="section">
-                <h4>System</h4>
+                <h4>System Modules</h4>
                 <!--
                 <div>
                     <a href="/modules/access/list">Access</a>
@@ -46,7 +46,7 @@
                 <div>
                     <a href="/modules/group/list">Group</a>
                 </div>
-                <h4>User</h4>
+                <h4>User Modules</h4>
                 <div>
                     <a href="/modules/article/list">Article</a>
                 </div>
@@ -75,7 +75,7 @@
         </div>
         <div class="col-md-6">
             <div class="section">
-                <h4>Test</h4>
+                <h4>Tool</h4>
                 <!--
                 <div>
                     <a href="/articles">Article</a>
@@ -100,7 +100,7 @@
                 </div>
                 -->
                 <div>
-                    <a href="/pages">Pages</a>
+                    <a href="/pages">Page Test</a>
                 </div>
             </div>
         </div>
