added ace_editor component to composition layout

--- a/site/views/layout/layout-composition.html
+++ b/site/views/layout/layout-composition.html
@@ -40,6 +40,7 @@
 <script type="text/jsx" src="/component/reactlet-table/src/table.js"></script>
 <script type="text/jsx" src="/component/reactlet-treeview/src/treeview.js"></script>
 <script type="text/jsx" src="/component/embed/iframe.js"></script>
+<script type="text/jsx" src="/component/editor/ace_editor.js"></script>
 <script type="text/jsx" src="/component/cabinet/cabinet.js"></script>
 
 <script type="text/jsx">
@@ -79,6 +80,7 @@ app.pageComposition = {{ page.compositionData|json|safe}};
 <link rel="stylesheet" href="/component/reactlet-table/style/table.css"/>
 <link rel="stylesheet" href="/component/reactlet-treeview/style/treeview.css"/>
 <link rel="stylesheet" href="/component/embed/iframe.css"/>
+<link rel="stylesheet" href="/component/editor/ace_editor.css"/>
 <link rel="stylesheet" href="/component/cabinet/cabinet.css"/>
 {% endblock %}
 </head>
