--- a/site/views/layout/layout-composition.html
+++ b/site/views/layout/layout-composition.html
@@ -20,6 +20,7 @@
 <script src="/library/highcharts/highcharts.js"></script>
 <script src="/library/highcharts/modules/treemap.js"></script>
 <script src="/library/react-d3-components/react-d3-components.min.js"></script>
+<script type="text/javascript" src="/library/ace-editor/src-min-noconflict/ace.js" charset="utf-8"></script>
 <script type="text/jsx" src="/component/common/common-mixin.js"></script>
 <script type="text/jsx" src="/script/page/support.js"></script>
 <script type="text/jsx" src="/component/header/blackboot_header.js"></script>
