fix display for ace editor component

--- a/site/public/component/editor/ace_editor.css
+++ b/site/public/component/editor/ace_editor.css
@@ -1,6 +1,11 @@
-.articledetail-container .articledetail-content {
+.aceeditor-container .ace-editor-content .ace-editor {
+    
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
     width: 100%;
-    padding-bottom: 25px;
-    padding-right: 0px;
-    padding-left: 0px;
+    min-height: 320px;
 }
