adjust ace editor style to allow normal flow of content below ace editor

--- a/site/public/component/editor/ace_editor.css
+++ b/site/public/component/editor/ace_editor.css
@@ -1,5 +1,5 @@
 .aceeditor-container .ace-editor-content .ace-editor {
-    position: absolute;
+    position: relative;
     top: 0;
     right: 0;
     bottom: 0;
