--- a/site/views/layout/layout-composition.html
+++ b/site/views/layout/layout-composition.html
@@ -63,6 +63,7 @@ app.pageComposition = {{ page.compositionData|json|safe}};
 <link rel="stylesheet" href="/library/bootstrap/css/bootstrap.css">
 <link rel="stylesheet" href="/library/webcharts/webcharts.v1_1_1.css">
 <link rel="stylesheet" href="/library/quill/quill.base.css">
+<link rel="stylesheet" href="/library/quill/quill.snow.css">
 <link rel="stylesheet" href="/style/style.css">
 <link rel="stylesheet" href="/component/common/common-style.css"/>
 <link rel="stylesheet" href="/component/header/blackboot_header.css"/>
