cleanup admin and manage pages

--- a/site/views/admin/manage.html
+++ b/site/views/admin/manage.html
@@ -23,13 +23,13 @@
                     <a href="/modules/article/list">Article</a>
                 </div>
                 <div>
-                    <a href="/modules/linkset/list">Linkset</a>
-                </div>
-                <div>
                     <a href="/modules/media/list">Media</a>
                 </div>
                 <div>
                     <a href="/modules/page/list">Page</a>
+                </div>
+                <div>
+                    <a href="/modules/product/list">Product</a>
                 </div>
             </div>
         </div>
