--- a/site/views/admin/index.html
+++ b/site/views/admin/index.html
@@ -35,17 +35,13 @@
         <div class="col-md-6">
             <div class="section">
                 <h4>System Modules</h4>
-                <!--
-                <div>
-                    <a href="/modules/access/list">Access</a>
-                </div>
-                -->
                 <div>
                     <a href="/modules/user/list">User</a>
                 </div>
                 <div>
                     <a href="/modules/group/list">Group</a>
                 </div>
+                
                 <h4>User Modules</h4>
                 <div>
                     <a href="/modules/article/list">Article</a>
@@ -57,12 +53,6 @@
                     <a href="/modules/composition/list">Composition</a>
                 </div>
                 <div>
-                    <a href="/modules/imageset/list">Imageset</a>
-                </div>
-                <div>
-                    <a href="/modules/item/list">Item</a>
-                </div>
-                <div>
                     <a href="/modules/linkset/list">Linkset</a>
                 </div>
                 <div>
@@ -71,12 +61,23 @@
                 <div>
                     <a href="/modules/page/list">Page</a>
                 </div>
+                <div>
+                    <a href="/modules/product/list">Product</a>
+                </div>
             </div>
         </div>
         <div class="col-md-6">
             <div class="section">
                 <!--
                 <h4>Tool</h4>
+            
+                <div>
+                    <a href="/modules/imageset/list">Imageset</a>
+                </div>
+                <div>
+                    <a href="/modules/item/list">Item</a>
+                </div>
+            
                 <div>
                     <a href="/articles">Article</a>
                 </div>
