add product detail component to cabinet

--- a/site/views/layout/layout-composition.html
+++ b/site/views/layout/layout-composition.html
@@ -32,6 +32,7 @@
 <script type="text/jsx" src="/component/item/detail.js"></script>
 <script type="text/jsx" src="/component/media/detail.js"></script>
 <script type="text/jsx" src="/component/article/detail.js"></script>
+<script type="text/jsx" src="/component/product/detail.js"></script>
 <script type="text/jsx" src="/component/linkset/detail.js"></script>
 <script type="text/jsx" src="/component/plate/plate.js"></script>
 <script type="text/jsx" src="/component/graph/d3graph.js"></script>
@@ -73,6 +74,7 @@ app.pageComposition = {{ page.compositionData|json|safe}};
 <link rel="stylesheet" href="/component/item/detail.css"/>
 <link rel="stylesheet" href="/component/media/detail.css"/>
 <link rel="stylesheet" href="/component/article/detail.css"/>
+<link rel="stylesheet" href="/component/product/detail.css"/>
 <link rel="stylesheet" href="/component/linkset/detail.css"/>
 <link rel="stylesheet" href="/component/plate/plate.css"/>
 <link rel="stylesheet" href="/component/graph/d3graph.css"/>
