center product image and text in product detail component

--- a/site/public/component/product/detail.css
+++ b/site/public/component/product/detail.css
@@ -9,4 +9,10 @@
     height: 240px;
     background-repeat: no-repeat;
     background-size: contain;
+    background-position-x: center;
+}
+
+.productdetail-container .productdetail-content .productdetail-text-content {
+    margin-top: 5px;
+    text-align: center;
 }
