--- a/site/public/style/product/detail.css
+++ b/site/public/style/product/detail.css
@@ -1,1 +1,20 @@
+.product-title {
+    font-size: 1.6em;
+    margin-top: 10px;
+}
 
+.product-image {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    max-height: 420px;
+}
+
+.product-description {
+    margin-top: 10px;
+    font-size: 1.2em;
+}
+
+.product-price {
+    margin-top: 10px;
+    font-size: 1.2em;
+}
