add to cart button and handler update on product detail page

--- a/site/views/product/detail.html
+++ b/site/views/product/detail.html
@@ -42,7 +42,7 @@ app.product = {{ page.product|json|raw }};
     </div>
     <div class="row" style="margin-top:20px;margin-bottom:30px;">
         <div class="col-md-12">
-            <button class="btn btn-success">Add to cart</button>
+            <button class="btn btn-success btn-add-cart">Add to cart</button>
         </div>
     </div>
 </div>
