--- a/site/views/basket/checkout.html
+++ b/site/views/basket/checkout.html
@@ -53,20 +53,22 @@
         </div>
     </div>
     <div class="row" style="margin-top:0px;margin-bottom:20px;">
-        <div class="col-md-9">
+        <div class="col-md-5">
             <div>
                 <h4>Payment Info</h4>
-                <table class="table">
+                <table class="table borderless">
                     <tbody>
                         <tr>
-                            <th>First Name</th>
-                            <th><input class="form-control" type="input" /></th>
-                            <th>Last Name</th>
-                            <th><input class="form-control" type="input" /></th>
+                            <td>First Name</td>
+                            <td><input class="form-control" type="input" /></td>
                         </tr>
                         <tr>
-                            <th>Credit Card Number</th>
-                            <th><input class="form-control" type="input" /></th>
+                            <td>Last Name</td>
+                            <td><input class="form-control" type="input" /></td>
+                        </tr>
+                        <tr>
+                            <td>Credit Card Number</td>
+                            <td><input class="form-control" type="input" /></td>
                         </tr>
                     </tbody>
                 </table>
